# WebAssetStudio

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs  index.html  logo.xcf  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.github/workflows/: main.yml
assetparser/: Cargo.toml
assetparser/src/: binary.rs  lib.rs
assetparser/src/xna/: mod.rs
audio/: export.cpp  export.h  pcm.cpp  pcm.h  util.cpp  util.h
audio/vorbis/: crc.js
crunch/: build.sh  dllmain.cpp
crunch/crunch/: crn_decomp.h
css/: hexview.css  main.css  tree.css  treeview.css
delta_gen/: main.py  new.py  rebuild.py  typedefs.rs
dotnet-utils/: Program.cs  index.html  main.js  wasmDecomp.csproj
dotnet-utils/Properties/: launchSettings.json
encoders/: Cargo.toml  LICENSE_MIT  crunch_bindings.js
encoders/src/: compress.rs  lib.rs  pngenc.rs  texdec.rs
encoders/tests/: web.rs
js/: binaryReader.js  binaryWriter.js  config.js  defaultTree.js  fileHandler.js  filter.js  hexview.js  main.js  stringReader.js  treeview.js  typeTree.js  utils.js
js/assetparser/: assetparser.d.ts  assetparser.js  assetparser_bg.js  assetparser_bg.wasm  assetparser_bg.wasm.d.ts  package.json
js/crunch/: crunch.js  crunch_native.js  crunch_native.wasm
js/cs-decomp/: decompiler.js
js/cs-decomp/dotnet/: README.md  dotnet.js  mono-config.json
js/encoders/: encoders.d.ts  encoders.js  encoders_bg.js  encoders_bg.wasm  encoders_bg.wasm.d.ts  package.json
js/fsb5/: audio.js  audio.wasm  decoders.js  fsb5.js
js/godot/: compressedData.js  godotFile.js  godotTree.js  pckFile.js  resource.js  type.js  variant.js  variantParser.js
js/godot/extensions/: baseExtension.js  fontFileExtension.js  mp3SampleExtension.js  oggSampleExtension.js  wavSampleExtension.js
js/godot/types/: texture.js
js/preview/: audio.js  audioPreview.js  basePreview.js  image.js
js/roblox/: rbxlFile.js  zigzag.js
js/roblox/chunks/: chunk.js  inst.js  meta.js  prnt.js  prop.js  sstr.js
js/unity/: assetFile.js  baseClassPreview.js  classIDType.js  compressedMesh.js  extension.js  extensionManager.js  packedTypes.js  pptr.js  remoteClassLoader.js  sharedStrings.js  texture2d_native.js  texture2d_native.wasm  typeTree.js  unityTree.js  webFile.js
js/unity/classExtensions/: font.js  material.js  mesh.js  monoScript.js  skinnedMeshRenderer.js  transform.js  videoClip.js
js/unityfs/: assetFile.js  basicTypes.js  binaryReader.js  buildTarget.js  bundleFile.js  classIDType.js  extension.js  extensionManager.js  generatedObject.js  lz.js  lzma.js  object.js  objectReader.js  reader.js  remoteClassLoader.js  sharedStrings.js  stream.js  texture2d.js  texture2d_native.js  texture2d_native.wasm  typeTree.js  unityFile.js  unityTree.js  utils.js  webFile.js
js/unityfs/classExtensions/: audioClip.js  font.js  material.js  textAsset.js  texture2d.js
js/unityfs/classes/: animation.js  animationClip.js  animator.js  animatorController.js  animatorOverrideController.js  assetBundle.js  audioClip.js  audioListener.js  avatar.js  behaviour.js  canvasRenderer.js  component.js  cubemap.js  editorExtension.js  flareLayer.js  font.js  gameObject.js  material.js  mesh.js  meshFilter.js  meshRenderer.js  monoBehaviour.js  monoScript.js  namedObject.js  object.js  particleSystemRenderer.js  physicMaterial.js  pptr.js  renderer.js  runtimeAnimatorController.js  shader.js  skinnedMeshRenderer.js  sprite.js  stuff.txt  textAsset.js  texture.js  texture2d.js  transform.js  videoClip.js
js/unreal/: package.js  pakfile.js  unrealTree.js  utils.js  version.js
js/xna/: readers.js  xnbFile.js  xnbTree.js
js/xna/types/: baseType.js  graphics.js  math.js  media.js  object.js  system.js
lib/: .empty
public/: ads.txt  fmod.wasm  fmodL.wasm  fmod_reduced.wasm  humans.txt  mono-config.json  site.webmanifest  sitemap.xml  wasmDecomp.runtimeconfig.json
src/: alert_hook.rs  errors.rs  lib.rs  logger.rs  utils.rs
src/base/: asset.rs  mod.rs  types.rs
src/base/format/: mod.rs
src/crunch/: crunch_native.js  crunch_native.wasm.xz  mod.rs
src/directx/: effect.rs  mod.rs  shader.rs  types.rs
src/fsb/: bank.rs  mod.rs
src/fsb/codecs/: mod.rs  vorbis.rs  vorbis_headers.bz2
src/gamemaker/: audiogroup.rs  file.rs  iff.rs  mod.rs  qoi.rs
src/studio/: mod.rs
src/studio/common/: mod.rs
src/studio/components/: base.rs  button.rs  checkbox.rs  mod.rs
src/studio/dock/: container.rs  mod.rs  widget.rs
src/studio/widgets/: asset_browser.rs  base.rs  import_export.rs  mod.rs
src/unity/: asset_file.rs  bundle_file.rs  compression.rs  mod.rs  version.rs
src/unity/assets/: external.rs  file.rs  mod.rs  typetree.rs
src/unity/assets/wrappers/: audioclip.rs  base.rs  mesh.rs  mod.rs  texture2d.rs
src/unity/bundle/: block.rs  file.rs  mod.rs  node.rs  storage.rs
src/unity/object/: identifier.rs  info.rs  mod.rs
src/utils/: buf.rs  compress.rs  debug.rs  dom.rs  em2rs.rs  fp16.rs  lzmabuf.rs  mod.rs  pcm.rs  time.rs  vorbis.rs
src/utils/js/: call.js  events.rs  file_reader.rs  filesystem.rs  imports.rs  mod.rs
src/utils/tex/: decoder.rs  mod.rs  pngenc.rs  qoi.rs  texdec.rs
src/xna/: lzx.rs  mod.rs  mojoshader.js  mojoshader.wasm.xz  shader.rs  type_base.rs  xnb.rs
src/xna/types/: graphics.rs  math.rs  media.rs  mod.rs  system.rs
tests/: tests.rs  web.rs
texture2d/: build.sh  dllexport.h  dllmain.cpp  etc.cpp  main.cpp  pngenc.cpp  pngenc.h  pvrtc.cpp
texture2d/fp16/: fp16.h
texture2d/unitycrunch/: crn_decomp.h
