[package]
name = "webassetstudio"
version = "0.1.0"
authors = ["ashduino101"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ashduino101/WebAssetStudio"
description = "An online tool to view, modify, and extract game asset files for a variety of game engines."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytes = { git = "https://github.com/ashduino101/bytes" }
wasm-bindgen = "0.2.95"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
bitfields = "0.2.0"
lzma-rs = { version = "0.3.0", features = ["stream"] }
lzxd = "0.2.5"
js-sys = "0.3.72"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3.45"
png = { version = "0.17.14", features = ["unstable"] }
texture2ddecoder = { git = "https://github.com/ashduino101/texture2ddecoder-rgba" }
anyhow = "1.0.93"
three-d = { version = "0.18.0", features = ["egui-gui"] }
three-d-asset = { version = "0.9.0", features = ["gltf", "hdr", "jpeg", "http"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
bitstream-io = "2.6.0"
rand = "0.8.5"
byteorder = "1.5.0"
crc32fast = "1.4.2"
zerocopy = "0.8.11"
bzip2-rs = "0.1.2"
tar = "0.4.43"
bitflags = "2.6.0"
regex = "1.11.1"
image = "0.25.5"
serde = "1.0.215"
serde_derive = "1.0.215"
async-std = "1.13.0"
lebe = "0.5.2"
flate2 = "1.0.35"
log = "0.4.22"
pretty_env_logger = "0.5.0"
walkdir = "2.5.0"
async-recursion = "1.1.1"
futures = "0.3.31"
pollster = "0.4.0"
#rust-lzma = "0.6.0"
#mojoshader = { path = "mojoshader" }
#wgpu = "0.19.1"

[dependencies.ogg]
version = "0.9.1"
features = ["bytes"]

[dependencies.lz4_flex]
version = "0.11.3"
features = ["safe-decode", "safe-encode"]

[dependencies.web-sys]
version = "0.3.72"  # keep inline with version used by wgpu
features = ["Document", "Element", "HtmlElement", "Node", "Window", "Blob", "Url", "DomTokenList", "NamedNodeMap", "File", "FileSystem", "FileSystemHandle", "FileSystemDirectoryHandle", "FileSystemDirectoryEntry", "FileSystemDirectoryReader", "FileSystemFileHandle", "FileSystemFileEntry", "FileReader", "FileReaderSync", "Event", "OffscreenCanvas", "CanvasRenderingContext2d", "ImageData", "ImageBitmap", "OffscreenCanvasRenderingContext2d", "ImageEncodeOptions"]

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
include_dir = "0.7.4"

[build-dependencies]
bindgen = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm32-unknown-unknown-openbsd-libc = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
